@@ -1,3 +1,8 @@
+== (In Git)
+
+=== Bugfixes
+* Fixed broken Ant script for Groovy example. (Aslak Hellesøy)
+
 == 0.1.2 2009-08-25
 
 Bugfix release. This release requires Cucumber 0.3.98.
